<resources>
    <string name="app_name">Meister</string>
    <string name="facebook_app_id">1721908281396141</string>
    <string name="login_text">Login</string>
    <string name="register_text">Register</string>
    <string name="register_email">Email</string>
    <string name="email_hint">Email adress</string>
    <string name="register_password">Password</string>
    <string name="password_hint">Password(minimum 8 characters)</string>
    <string name="password_confirm_hint">Confirm password</string>
    <string name="error_email">Please enter a valid e-mail</string>
    <string name="error_password">Please provide a viable password ( minimum 8 characters)</string>
    <string name="error_password_missmatch">Your passwords don\'t match</string>
    <string name="button_forgot_passowrd">Forgot password?</string>
    <string name="button_reset_password">Reset Password</string>
    <string name="password_missmatch">Please check your passwords</string>
    <string name="user_description">Description</string>
    <string name="user_sports">Sports</string>
    <string name="user_edit">Edit</string>
    <string name="user_done">Done</string>
    <string name="action_logout">Log out</string>
    <string name="menu_message">Messages</string>
    <string name="empty_state_sports">You have no sports selected. Tap here and you can select some!</string>
    <string name="empty_state_all_sports">There are no sports selected.</string>
    <string name="remove_sport">Sport removed!</string>
    <string name="sports_menu">Manage Sports</string>
</resources>
