<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/loginView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/space_medium"
        >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_email_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/space_medium"
            android:hint="@string/email_hint"
            android:textColorHint="@color/light_grey">

            <com.nalatarate.meister.utils.EmailEditText
                android:id="@+id/emailLogin"
                style="@style/EditText.Login"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:nextFocusDown="@+id/password"
                android:nextFocusForward="@+id/password"
                android:nextFocusRight="@+id/password" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_password_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_email_wrapper"
            android:layout_marginTop="@dimen/space_small"
            android:hint="@string/password_hint"
            android:textColorHint="@color/light_grey">


            <com.nalatarate.meister.utils.PasswordEditText
                android:id="@+id/passwordLogin"
                style="@style/EditText.Login"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:nextFocusLeft="@+id/emailLogin"
                android:nextFocusUp="@+id/emailLogin" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnLoginConfirm"
            style="@style/Button.EntryLogin"
            android:text="@string/login_text"
            android:layout_below="@+id/login_password_wrapper"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/btnForgotPassword"
            style="@style/TextView.Small.Blue"
            android:layout_below="@+id/btnLoginConfirm"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/space_small"
            android:text="@string/button_forgot_passowrd" />
    </RelativeLayout>

</LinearLayout>