<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/registerView"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/space_medium"
        android:layout_height="match_parent">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_email_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/space_medium"
            android:hint="@string/email_hint"
            android:textColorHint="@color/light_grey">

            <com.nalatarate.meister.utils.EmailEditText
                android:id="@+id/emailRegister"
                style="@style/EditText.Login"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:nextFocusDown="@+id/passwordRegister"
                android:nextFocusForward="@+id/passwordRegister"
                android:nextFocusRight="@+id/passwordRegister" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_password_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_email_wrapper"
            android:layout_marginTop="@dimen/space_small"
            android:hint="@string/password_hint"
            android:textColorHint="@color/light_grey">


            <com.nalatarate.meister.utils.PasswordEditText
                android:id="@+id/passwordRegister"
                style="@style/EditText.Login"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:nextFocusLeft="@id/emailRegister"
                android:nextFocusUp="@id/emailRegister"
                android:nextFocusDown="@+id/passwordRegister2"
                android:nextFocusForward="@+id/passwordRegister2"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_password2_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_password_wrapper"
            android:layout_marginTop="@dimen/space_small"
            android:hint="@string/password_confirm_hint"
            android:textColorHint="@color/light_grey">


            <com.nalatarate.meister.utils.PasswordEditText
                android:id="@+id/passwordRegister2"
                style="@style/EditText.Login"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:nextFocusLeft="@+id/passwordRegister"
                android:nextFocusUp="@+id/passwordRegister" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnRegisterConfirm"
            style="@style/Button.EntryLogin"
            android:layout_below="@+id/register_password2_wrapper"
            android:layout_marginTop="@dimen/space_small"
            android:text="@string/register_text" />

    </RelativeLayout>


</LinearLayout>