<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleMarginEnd="64dp"
                app:expandedTitleMarginStart="48dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/space_medium"
                    android:orientation="vertical">

                    <com.nalatarate.meister.utils.CircularImageView
                        android:id="@+id/user_logo"
                        android:layout_width="@dimen/logo_size"
                        android:layout_height="@dimen/logo_size"
                        android:layout_above="@+id/voucher_layout"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/space_medium"
                        android:adjustViewBounds="true"
                        android:scaleType="centerInside"
                        app:civ_border="true"
                        app:civ_borderColor="@color/floodlight_blue"
                        app:civ_borderWidth="1dp" />

                </LinearLayout>

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:title="@string/app_name"
                    android:titleTextColor="@color/floodlight_blue"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/Base.AppTheme" />

            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <RelativeLayout
                android:id="@+id/scrollContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:id="@+id/descriptionHeader"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:background="@drawable/header_description">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_marginLeft="@dimen/space_small"
                            android:padding="10dp"
                            android:text="@string/user_description"
                            android:textColor="@color/colorAccent"
                            android:textSize="16sp" />

                        <ImageView
                            android:id="@+id/description_expand"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="@dimen/space_small"
                            android:src="@drawable/expander"
                            android:tint="@color/colorAccent" />

                    </RelativeLayout>

                    <LinearLayout
                        android:id="@+id/descriptionContent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/descriptionHeader"
                        android:background="@color/white"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <TextView
                            android:id="@+id/tv_description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/space_small"
                            android:textColor="@color/colorPrimaryDark"
                            tools:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum" />


                        <EditText
                            android:id="@+id/et_description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/space_small"
                            android:imeOptions="actionDone"
                            android:textColor="@color/colorPrimaryDark"
                            android:visibility="gone" />

                        <TextView
                            android:id="@+id/tvEdit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:layout_marginBottom="@dimen/space_small"
                            android:layout_marginRight="@dimen/space_medium"
                            android:text="@string/user_edit"
                            android:textAllCaps="true"
                            android:textColor="@color/colorAccent"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <RelativeLayout
                        android:id="@+id/sportHeader"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/descriptionContent"
                        android:layout_marginTop="-2dp"
                        android:background="@drawable/header_sports">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_marginLeft="@dimen/space_small"
                            android:padding="10dp"
                            android:text="@string/user_sports"
                            android:textColor="@color/colorAccent"
                            android:textSize="16sp" />

                        <ImageView
                            android:id="@+id/sport_expand"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="@dimen/space_small"
                            android:src="@drawable/expander"
                            android:tint="@color/colorAccent" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/sportsContent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/rv_sports"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        </android.support.v7.widget.RecyclerView>
                    </RelativeLayout>
                </RelativeLayout>
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_events"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </android.support.v7.widget.RecyclerView>

            </RelativeLayout>
        </android.support.v4.widget.NestedScrollView>
    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:paddingTop="@dimen/space_micro"
        app:headerLayout="@layout/header_navigation"
        app:itemIconTint="@color/colorAccent"
        app:menu="@menu/menu_home" />

</android.support.v4.widget.DrawerLayout>